# lemmih.com

./: AGENTS.md
.github/workflows/: build-cv.yml  ci.yml  cleanup-preview.yml  deploy-food-app.yml  deploy.yml
cv/: cv.typ  elements.typ  flake.nix  style.typ
cv-lemmih-com/: _redirects  flake.nix  wrangler.jsonc
food-lemmih-com/: .gitignore  Cargo.toml  README.md  flake.nix  wrangler.toml
food-lemmih-com/.github/workflows/: cleanup-preview.yml  deploy.yml
food-lemmih-com/crates/app/: Cargo.toml
food-lemmih-com/crates/app/src/: lib.rs
food-lemmih-com/crates/client/: Cargo.toml
food-lemmih-com/crates/client/src/: lib.rs
food-lemmih-com/crates/worker/: Cargo.toml
food-lemmih-com/crates/worker/src/: lib.rs
food-lemmih-com/e2e-tests/: Cargo.toml
food-lemmih-com/e2e-tests/src/: main.rs
food-lemmih-com/nix/: run-e2e-tests.sh  worker-entrypoint.js
food-lemmih-com/scripts/: build-worker.sh
