[workspace]
resolver = "2"
members = ["crates/app", "crates/client", "crates/worker", "e2e-tests"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8.7", default-features = false, features = [
  "http1",
  "macros",
] }
http-body-util = "0.1.2"
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.8.13", default-features = false }
leptos_axum = { version = "0.8.7", default-features = false, features = [
  "wasm",
] }
leptos_router = { version = "0.8.10", default-features = false }
leptos_config = { version = "0.8.8" }
leptos_meta = { version = "0.8.5", default-features = false }
log = "0.4"
serde = { version = "1", features = ["derive"] }
tower = "0.5"
tower-service = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Request", "Window"] }
worker = "0.6.7"
tokio = { version = "1.38", default-features = false, features = [
  "macros",
  "rt",
  "time",
  "sync",
  "io-util",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
