[package]
name = "food-lemmih-com-app"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_config = { workspace = true }
leptos_meta = { workspace = true }
