[package]
name = "food-lemmih-com-app"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/csr", "leptos/hydrate"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_config = { workspace = true }
leptos_meta = { workspace = true }
