[package]
name = "food-lemmih-com-client"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
food-lemmih-com-app = { path = "../app" }
leptos = { workspace = true, features = ["csr", "hydrate"] }
log = { workspace = true }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true }

